# Yoink

./: README.md  pyproject.toml
.hypothesis/constants/: 0355681ced4aa8ba  0769003e35203aa1  092f75b22ed580af  0af295297f40cffc  0c183ee7f90b3257  0de86559a6bc27bf  0fe48fd9f607eeb0  15a128759ffbeaab  17a5f79e55b4231c  1bf127608cd18863  1c80c1db6fe66e00  26c05831ea8527ff  285e387016eb320a  28f262fe9e81256d  29607c126e6666f3  2b0804bede37abf4  2e89d7eb0e9e525e  3061b6180d5379d9  3a2624ca7f2be32b  3b00646364229f9b  3d1b071521696957  3d8d08978c2aa1b3  4142d45feab58a64  41d9a8a135b6ae45  430ba3e201081c59  4b6541d7b1f8f045  5d07ec6978a6fab6  5f8615e98e55562b  5fc5e3ec169e13bb  61fb7c0307ec897b  67013dd059effade  68568207ddf84793  6a1794883ef3700f  74fb330c42a0997f  76f2f8141bdf925e  7896196fe3d6dafc  7a7e08f232ffab50  7eafd68cbb8e9df9  7f833d3220f7ef53  88201c749121a68c  (+41 more)
examples/: concatmap_adds.py  id_func.py  map.py  map_add_one.py  proj1.py  proj2.py
src/python_delta/: __init__.py  compiled_function.py  core.py  dataflow_graph.py  delta.py  event.py  partial_order.py  realized_ordering.py  stream.py  stream_op.py  types.py
src/python_delta/compilation/: __init__.py  bufferop_compiler.py  context.py  (+13 more)
src/yoink/: core.py  dataflow_graph.py  event.py  yoink.py
tests/: test_catl.py  test_catr.py  test_compilation.py  test_concat.py  test_concat_map.py  test_cond.py  test_execution.py  test_jit.py  test_map.py  test_parr.py  test_runsOfNonZ.py  test_runsofnonz.py  test_splitz.py  test_star.py  test_sum.py  test_tycheck.py  test_var.py  test_wait.py  test_zip_with.py
(+69 files in other folders)
