[project]
name = "python-delta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joseph Cutler", email = "jwc@seas.upenn.edu" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
python-delta = "python_delta:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
